--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <label for="DOB">Date of Birth:</label><br>
   <input type="date" id="DOB" name="DOB"><br>
 
-<p>Choose your wearable device:</p>
+  <p>Choose your wearable device:</p>
   <input type="radio" id="FitBit" name="Wearable" value="FitBit">
   <label for="FitBit">FitBit</label><br>
   <input type="radio" id="Withings" name="Wearable" value="Withings">
@@ -36,30 +36,5 @@
 
   <input type="submit" value="Submit">
 </form>
-
-<script>
-function handleSubmit(event) {
-  event.preventDefault();
-
-  const data = new FormData(event.target);
-  const value = Object.fromEntries(data.entries());
-
-  console.log({value});
-}
-
-const form = document.querySelector('form');
-form.addEventListener('submit', handleSubmit);
-
-
-$.ajax({
-    type: "POST",
-    url: "https://3symvccz6h.execute-api.ap-south-1.amazonaws.com/UserDataStage01",
-    data: JSON.stringify(data),
-    contentType: "application/json; charset=utf-8",
-    dataType: "json",
-    success: function(data){alert(data);},
-    error: function(errMsg) {
-        alert(errMsg);
-    }
-});
-</script>
+</body>
+</html>
