--- a/index.html
+++ b/index.html
@@ -3,38 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wearables user registration</title>
+    <title>Your Website</title>
 </head>
 <body>
-    <h1>Wearables user registration</h1>
-    <h2>Register yourself</h2>
-    <p>Please fill and submit following form to register.</p>
+    <h1>Welcome to My Website</h1>
+    <p>This is a simple static website.</p>
 
+    <form action="https://3symvccz6h.execute-api.ap-south-1.amazonaws.com/UserDataStage01" method="post">
+        <!-- Replace "YOUR_FORM_ENDPOINT" with your actual FabForm form endpoint -->
 
-<form>
-<form action="https://3symvccz6h.execute-api.ap-south-1.amazonaws.com/UserDataStage01" method="POST">
-  <label for="User">User:</label><br>
-  <input type="text" id="User" name="User"><br>
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname"><br>
-  <label for="email">Email:</label><br>
-  <input type="email" id="lname" name="email"><br>
-  <label for="phone">Mobile:</label><br>
-  <input type="tel" id="phone" name="phone"><br>
-  <label for="DOB">Date of Birth:</label><br>
-  <input type="date" id="DOB" name="DOB"><br>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br>
 
-  <p>Choose your wearable device:</p>
-  <input type="radio" id="FitBit" name="Wearable" value="FitBit">
-  <label for="FitBit">FitBit</label><br>
-  <input type="radio" id="Withings" name="Wearable" value="Withings">
-  <label for="Withings">Withings</label><br>
-  <input type="radio" id="AuraRing" name="Wearable" value="AuraRing">
-  <label for="AuraRing">AuraRing</label><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br>
 
-  <input type="submit" value="Submit">
-</form>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" required></textarea><br>
+
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
