--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <form action="https://3symvccz6h.execute-api.ap-south-1.amazonaws.com/UserDataStage01" method="post">
         <!-- Replace "YOUR_FORM_ENDPOINT" with your actual FabForm form endpoint -->
 
+        <label for="User">User:</label>
+        <input type="text" id="User" name="User" required><br>
+        
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br>
+
+        <label for="surname">Surname:</label>
+        <input type="text" id="surname" name="surname" required><br>
 
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br>
